--- a/build.yaml
+++ b/build.yaml
@@ -19,4 +19,6 @@
 ---
 include:
   - board: nrf52840dk_nrf52840
-    shield: layla_v2
+    shield: layla_left
+  - board: nrf52840dk_nrf52840
+    shield: layla_right
