--- a/config/boards/shields/layla_v2/layla.dtsi
+++ b/config/boards/shields/layla_v2/layla.dtsi
@@ -68,9 +68,9 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)    RC(4,0)        RC(4,11)   RC(
         #address-cells = <1>;
         #size-cells = <0>;
 
-        glidepoint_split: glidepoint_split@2a {
+        glidepoint_split: glidepoint_split@0 {
             compatible = "zmk,input-split";
-            reg = <2a>;
+            reg = <0>;
         };
     };
 };
