--- a/config/boards/shields/layla_v2/layla.dtsi
+++ b/config/boards/shields/layla_v2/layla.dtsi
@@ -73,6 +73,12 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)    RC(4,0)        RC(4,11)   RC(
             reg = <0>;
         };
     };
+
+    glidepoint_listener: glidepoint_listener {
+        compatible = "zmk,input-listener";
+        status = "disabled";
+        device = <&glidepoint_split>;
+    };
 };
 
 &pro_micro_i2c {
@@ -93,18 +99,4 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)    RC(4,0)        RC(4,11)   RC(
         inversion-on;
         prechargep = <0x22>;
     };
-	
-    glidepoint: glidepoint@2a {
-        compatible = "cirque,pinnacle";
-        reg = <0x2a>;
-        status = "okay";
-        dr-gpios = <&pro_micro 1 (GPIO_ACTIVE_HIGH)>; // DR pin on cirque is always &vik_conn 5
-
-        sensitivity = "4x";
-        sleep;
-    };
-};
-
-&glidepoint_split {
-    device = <&glidepoint>;
 };
