--- a/config/boards/shields/layla_v2/layla.dtsi
+++ b/config/boards/shields/layla_v2/layla.dtsi
@@ -64,21 +64,11 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)    RC(4,0)        RC(4,11)   RC(
         triggers-per-rotation = <18>;
 	};
 
-	split_inputs {
-        #address-cells = <1>;
-        #size-cells = <0>;
-
-        glidepoint_split: glidepoint_split@0 {
-            compatible = "zmk,input-split";
-            reg = <0>;
-        };
-    };
-
-    glidepoint_listener: glidepoint_listener {
-        compatible = "zmk,input-listener";
-        status = "disabled";
-        device = <&glidepoint_split>;
-    };
+	glidepoint_listener: glidepoint_listener {
+		compatible = "zmk,input-listener";
+		status = "disabled";
+		device = <&glidepoint>;
+	};
 };
 
 &pro_micro_i2c {
@@ -98,5 +88,15 @@ RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5)    RC(4,0)        RC(4,11)   RC(
         com-sequential;
         inversion-on;
         prechargep = <0x22>;
+    };
+	
+    glidepoint: glidepoint@0 {
+        compatible = "cirque,pinnacle";
+        reg = <0x2a>;
+        status = "okay";
+        dr-gpios = <&pro_micro 1 (GPIO_ACTIVE_HIGH)>;
+
+        sensitivity = "4x";
+        sleep;
     };
 };
