--- a/build.yaml
+++ b/build.yaml
@@ -22,3 +22,5 @@ include:
     shield: layla_left
   - board: nice_nano_v2
     shield: layla_right
+  - board: nice_nano_v2
+    shield: settings_reset
